--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     font-size: 62.5%;
     color-scheme: dark light;
     --bg-color: #fbcb34;
-    --price-clr:hsl(180, 100%, 94%,0.6);
+    --price-clr:#f3fafb;
     --link-clr:blue;
     --font-ff:'Roboto', sans-serif;
     --font-ff2:'Poppins', sans-serif;
